--- a/demo-1/src/test.scss
+++ b/demo-1/src/test.scss
@@ -1,4 +1,16 @@
 html,
 body {
-  background-color: beige;
+  background-color: burlywood;
+}
+
+.test {
+  width: 100px;
+  height: 100px;
+  background-color: cadetblue;
+//   transition-duration transition-delay
+  transition: 0.5s 2s width ease-in-out;
+}
+
+.test:hover {
+  width: 500px;
 }
