left: :hole:publicPath

--- a/demo-1/src/test.scss
+++ b/demo-1/src/test.scss
@@ -15,5 +15,5 @@ body {
 .test:hover {
   width: 500px;
   margin-bottom: 20px;
-  background-image: url('./assets/test_url_loader.png');
+  background-image: url('./assets/images/test_url_loader.png');
 }
